tests/ui/supertrait-shadowing/definition-site.stderr
error: trait item `method` from `Super` shadows identically named item from supertrait
  --> $DIR/definition-site.rs:11:5
   |
LL |     fn method();
   |     ^^^^^^^^^^^^
   |
note: item from `SuperSuper` is shadowed by a subtrait item
  --> $DIR/definition-site.rs:5:5
   |
LL |     fn method();
   |     ^^^^^^^^^^^^
note: the lint level is defined here
  --> $DIR/definition-site.rs:2:9
   |
LL | #![deny(shadowing_supertrait_items)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: trait item `CONST` from `Super` shadows identically named item from supertrait
  --> $DIR/definition-site.rs:13:5
   |
LL |     const CONST: i32;
   |     ^^^^^^^^^^^^^^^^
   |
note: item from `SuperSuper` is shadowed by a subtrait item
  --> $DIR/definition-site.rs:6:5
   |
LL |     const CONST: i32;
   |     ^^^^^^^^^^^^^^^^

error: trait item `Assoc` from `Super` shadows identically named item from supertrait
  --> $DIR/definition-site.rs:15:5
   |
LL |     type Assoc;
   |     ^^^^^^^^^^
   |
note: item from `SuperSuper` is shadowed by a subtrait item
  --> $DIR/definition-site.rs:7:5
   |
LL |     type Assoc;
   |     ^^^^^^^^^^

error: trait item `method` from `Sub` shadows identically named item from supertrait
  --> $DIR/definition-site.rs:20:5
   |
LL |     fn method();
   |     ^^^^^^^^^^^^
   |
note: items from several supertraits are shadowed: `Super` and `SuperSuper`
  --> $DIR/definition-site.rs:5:5
   |
LL |     fn method();
   |     ^^^^^^^^^^^^
...
LL |     fn method();
   |     ^^^^^^^^^^^^

error: trait item `CONST` from `Sub` shadows identically named item from supertrait
  --> $DIR/definition-site.rs:22:5
   |
LL |     const CONST: i32;
   |     ^^^^^^^^^^^^^^^^
   |
note: items from several supertraits are shadowed: `Super` and `SuperSuper`
  --> $DIR/definition-site.rs:6:5
   |
LL |     const CONST: i32;
   |     ^^^^^^^^^^^^^^^^
...
LL |     const CONST: i32;
   |     ^^^^^^^^^^^^^^^^

error: trait item `Assoc` from `Sub` shadows identically named item from supertrait
  --> $DIR/definition-site.rs:24:5
   |
LL |     type Assoc;
   |     ^^^^^^^^^^
   |
note: items from several supertraits are shadowed: `Super` and `SuperSuper`
  --> $DIR/definition-site.rs:7:5
   |
LL |     type Assoc;
   |     ^^^^^^^^^^
...
LL |     type Assoc;
   |     ^^^^^^^^^^

error: aborting due to 6 previous errors

